--- a/src/components/about/Organization.astro
+++ b/src/components/about/Organization.astro
@@ -3,23 +3,31 @@ type Props = {
   title: string;
   span: string;
   jobType: string;
+  designation: string;
   link: string;
+  logo?: ImageMetadata;
 };
+import type { ImageMetadata } from "astro";
 import { Icon } from "astro-icon";
+import { Image } from "astro:assets";
 
-const { title, span, jobType, link } = Astro.props;
+const { title, span, jobType, designation, link, logo } = Astro.props;
 ---
 
 <a href={link} class="group cursor-pointer border border-white/10 p-5">
   <div class="flex justify-between pb-5">
     <div class="">
-      <h3 class="text-xl font-bold text-white group-hover:underline">
-        {title}
-        <Icon
-          name="mdi:open-in-new"
-          class="ml-2 hidden h-4 w-4 transition-transform group-hover:inline-block group-hover:text-white/60"
-        />
-      </h3>
+      <div class="flex items-center gap-2">
+        {logo && <Image src={logo} alt="" class="h-5 w-5" />}
+        <h3 class="text-xl font-bold text-white group-hover:underline">
+          {title}
+          <Icon
+            name="mdi:open-in-new"
+            class="ml-2 hidden h-4 w-4 transition-transform group-hover:inline-block group-hover:text-white/60"
+          />
+        </h3>
+      </div>
+      <small class="block pt-2 text-white/80">{designation}</small>
       <small>{span}</small>
     </div>
 
