--- a/src/components/layout/HeaderNavItem.astro
+++ b/src/components/layout/HeaderNavItem.astro
@@ -11,16 +11,18 @@ const active = pathname === href;
 <a
   href={href}
   class={`relative group block cursor-pointer font-medium capitalize outline-none transition-all hover:text-white px-3 p-1 ${
-    active ? "text-white" : "text-white/70 no-underline group"
+    active ? "text-white" : "text-white/70 no-underline"
   }`}
 >
   <slot />
 
-  {active && <span class="absolute inset-0 rounded-lg bg-white/10" />}
-
-  <span
-    transition:name="active-underline"
-    class={`absolute inset-0 rounded-lg bg-white/10 opacity-0 ${
-      active ? "" : "group-hover:opacity-100"
-    }`}></span>
+  {
+    active && (
+      <span
+        id="active-nav-item"
+        transition:name="active-underline"
+        class="absolute inset-0 rounded-lg bg-white/10"
+      />
+    )
+  }
 </a>
