chore: add google ads script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,10 @@ const { className, seo, keywords, schema } = Astro.props;
     <link rel="icon" type="image/png" href="/icon-256x256.png" />
     <meta name="generator" content={Astro.generator} />
     {keywords && <meta name="keywords" content={keywords} />}
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8750631183642200"
+      crossorigin="anonymous"></script>
     <ViewTransitions />
     <meta
       name="keywords"
