--- a/src/components/blog/blog-card.astro
+++ b/src/components/blog/blog-card.astro
@@ -6,48 +6,42 @@ import { Image } from "astro:assets";
 const { blog } = Astro.props as { blog: Blog };
 ---
 
-<a href={`/blog/${blog.slug?.current}`} class="group relative">
+<a href={`/blog/${blog.slug?.current}`} class="group relative block">
   <div
     class="absolute -inset-0.5 -z-10 animate-tilt rounded-3xl bg-gradient-to-r from-blue-800 to-purple-800 opacity-60 blur transition duration-1000 group-hover:opacity-100 group-hover:blur-md group-hover:duration-100"
   >
   </div>
   <article
-    class="flex h-full w-full flex-col overflow-hidden rounded-[calc(1.5rem-1px)] bg-black p-3 sm:flex-row"
+    class="flex h-full w-full flex-col overflow-hidden rounded-2xl border border-zinc-800/50 bg-black backdrop-blur-sm sm:flex-row"
   >
     <Image
       transition:name={blog.slug.current}
       src={urlForImage(blog.mainImage.asset).format("webp").url()}
       alt={blog.title}
-      class="min-h-72 aspect-video w-full rounded-[calc(1.5rem-2px)] object-cover sm:w-[50%]"
-      object-fit="cover"
+      class="aspect-video w-full object-cover transition-transform duration-300 group-hover:scale-[1.02] sm:w-[45%]"
       width="400"
       height="250"
     />
-    <div class="flex flex-1 flex-col justify-between p-3 sm:p-6">
-      <div class="flex flex-col gap-4 text-sm sm:text-base">
-        <h2
-          class="mb-1 line-clamp-2 text-base font-bold text-white sm:text-lg md:text-xl"
-        >
+    <div class="flex flex-1 flex-col justify-between p-5 sm:p-6">
+      <div class="flex flex-col gap-3">
+        <h2 class="text-lg font-medium text-white/90 sm:text-xl">
           {blog.title}
         </h2>
 
-        <p>
+        <p class="line-clamp-3 text-sm text-zinc-400">
           {blog.seoDescription}
         </p>
 
-        <div class="flex gap-3 text-sm">
-          {blog.categories.map((category) => <span>#{category.title}</span>)}
+        <div class="mt-2 flex flex-wrap gap-2">
+          {
+            blog.categories.map((category) => (
+              <span class="rounded-full bg-zinc-800/50 px-3 py-1 text-xs text-zinc-300">
+                {category.title}
+              </span>
+            ))
+          }
         </div>
       </div>
-
-      <!-- <div class="flex flex-row-reverse items-center justify-between">
-        <a
-          href={`/blog/${blog.slug?.current}`}
-          class="rounded bg-accent p-1.5 px-3 text-xs font-bold text-white shadow-lg ring-accent ring-offset-2 ring-offset-black transition-all hover:ring-2 sm:text-sm"
-        >
-          Read More
-        </a>
-      </div> -->
     </div>
   </article>
 </a>
