--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -10,7 +10,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
   className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-5 md:pt-24"
 >
   <div class="flex w-full flex-col items-center gap-5 text-center">
-    <p class="text-3xl font-semibold leading-tight sm:text-4xl md:text-5xl">
+    <p class="text-3xl leading-tight font-semibold sm:text-4xl md:text-5xl">
       I'm a <span class="text-white">Development Ally</span><br />for Innovators
 
       <span class="[&>svg]:inline-block [&>svg]:h-8 [&>svg]:w-8">
@@ -24,7 +24,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
 
     <a
       href="https://calendly.com/r44j/30min"
-      class="rounded-lg bg-accent2 px-6 py-2 text-xl font-bold text-white ring-accent2 ring-offset-2 ring-offset-black hover:ring-2 focus:ring-2"
+      class="bg-accent2 ring-accent2 rounded-lg px-6 py-2 text-xl font-bold text-white ring-offset-2 ring-offset-black hover:ring-2 focus:ring-2"
       transition:name="hero-call-to-action"
     >
       Book a free meeting</a
@@ -59,7 +59,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
       <ul class="flex flex-col gap-5 text-white/70">
         <li class="flex items-center gap-3">
           <div
-            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-800 font-audiowide text-white/80"
+            class="font-audiowide grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-800 text-white/80"
           >
             1
           </div>
@@ -71,7 +71,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
         </li>
         <li class="flex items-center gap-3">
           <div
-            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-800 font-audiowide text-white/80"
+            class="font-audiowide grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-800 text-white/80"
           >
             2
           </div>
@@ -81,29 +81,6 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
             with speed and precision.
           </div>
         </li>
-        <!-- <li class="flex items-center gap-3">
-          <div
-            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-200 font-audiowide text-gray-500"
-          >
-            3
-          </div>
-          <div class="flex-shrink">
-            My agility and productivity arise from both automation and adept
-            navigation.
-          </div>
-        </li>
-        <li class="flex items-center gap-3">
-          <div
-            class="grid h-10 w-10 shrink-0 place-items-center rounded-full bg-gray-200 font-audiowide text-gray-500"
-          >
-            4
-          </div>
-          <div class="flex-shrink">
-            I heavily utilize shortcuts, dedicating time primarily to thoughtful
-            problem-solving. Simplifying work processes allows me to deliver
-            with speed and precision.
-          </div>
-        </li> -->
       </ul>
       <p class="pt-10">
         For top-tier web solutions, trust my streamlined approach to
