--- a/src/components/uses/hero-uses.astro
+++ b/src/components/uses/hero-uses.astro
@@ -14,7 +14,7 @@ const iconMap: Record<string, any> = {
 };
 ---
 
-<section class="container mx-auto px-4 py-16">
+<section class="container mx-auto pt-6 md:px-4 md:py-16">
   <div class="grid gap-6 md:grid-cols-3">
     {
       Uses.map((use) => {
@@ -57,22 +57,22 @@ const iconMap: Record<string, any> = {
     }
   </div>
 </section>
-<!-- 
+<!--
 <script>
   import gsap from "gsap";
-  
+
   document.addEventListener('astro:page-load', () => {
     const items = document.querySelectorAll('[data-uses-item]');
-    
-    gsap.fromTo(items, 
-      { 
-        opacity: 0, 
-        y: 50 
+
+    gsap.fromTo(items,
+      {
+        opacity: 0,
+        y: 50
       },
-      { 
-        opacity: 1, 
-        y: 0, 
-        duration: 0.5, 
+      {
+        opacity: 1,
+        y: 0,
+        duration: 0.5,
         stagger: 0.1,
         ease: 'power2.out'
       }
